[package]
name = "rumenx-blackjack"
version = "0.1.0"
edition = "2024"
authors = ["Rumen Damyanov <contact@rumenx.com>"]
description = "A simple Blackjack card game engine and REST API server written in Rust"
license = "MIT"
repository = "https://github.com/RumenDamyanov/rust-blackjack"
homepage = "https://github.com/RumenDamyanov/rust-blackjack"
readme = "README.md"
keywords = ["blackjack", "card-game", "api", "axum", "casino"]
categories = ["games", "web-programming::http-server"]
include = [
    "src/**/*",
    "examples/**/*",
    "Cargo.toml",
    "Cargo.lock",
    "LICENSE.md",
    "README.md",
    "CHANGELOG.md",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
    "SECURITY.md",
    "FUNDING.md",
    "Makefile",
    "Dockerfile",
]

[[bin]]
name = "rust-blackjack"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.10"
thiserror = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
